asset/sass/_screen.scss
/* ... */
nav.pagination {
    margin-bottom: $spacing-l;
    font-size: $base-font-size;
    line-height: 1.5 * $base-line-height;
    display: inline-flex;
    flex-wrap: wrap;
    align-items: center;
}

.pagination input {
    text-align: center;
}

.resource-list + .pagination {
    border-color: transparent;
}

.pagination form {
    min-width: 3 * $spacing-l;
    margin-right: $spacing-m;
}

.pagination form,
.pagination .button,
.pagination button,
.pagination .page-count {
    display: inline-block;
    vertical-align: top;
    height: 1.5 * $base-line-height;
}

.pagination-buttons {
    margin-right: $spacing-m;
}

.pagination .button {
    border: 1px solid $light;
    background-color: $light;
    width: 1.5 * $spacing-l;
    text-align: center;
    padding: $spacing-s;
    border-radius: 2px;
    color: #000;
    line-height: $base-line-height;
}

.pagination .inactive.button {
    opacity: .5;
    color: $gray;
    background-color: white;
}

.pagination input {
    width: 2 * $spacing-l;
}

.breadcrumbs {
    font-size: .75 * $base-font-size;
    margin: $spacing-m 0;
}

/* @end */

/* @group ----- Header ----- */

h1.site-title {
    font-size: 1.25 * $base-font-size;
    line-height: $base-line-height;
    padding-right: 1.5 * $base-line-height;
    padding-left: $spacing-l;
}

header {
    margin: 0 0 (2.5 * $spacing-l);
    background-color: #fff;
    border-bottom: 1px solid $light;
    position: relative;

    & > * {
        @include container;
         display: block;
    }
}

.site-title:hover,
.site-title:active {
    border-bottom: 0;
}

.site-title h1 {
    margin: 0;
}

button.o-icon-search {
    display: none;
}

#search {
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    background-color: #fff;
    border-bottom: 1px solid $light;
    border-top: 1px solid $light;
    padding: $spacing-s $spacing-l;
}

#search form {
    display: flex;
    flex-wrap: nowrap;
}

#search form input[type="text"] {
    width: 100%;
}

#search form button[type="submit"] {
    height: 1.5 * $base-line-height;
    width: 1.5 * $base-line-height;
    text-indent: -9999px;
    position: relative;
    border-radius: 0 3px 3px 0;

    &:before {
        content: "\f002";
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        text-align: center;
        text-indent: 0;
        line-height: 1.5 * $base-line-height;
    }
}

.banner {
    position: relative;
    display: flex;
    align-items: center;
    overflow: hidden;
    z-index: -1;
}

.banner img {
    width: 100%;
}

/* @end */

/* @group ----- Footer ----- */

footer {
    @include container;
    padding: 0 $spacing-l $spacing-l;
    clear: both;
}

/* @end */

/* @group ----- Page and Blocks ----- */

#content {
    @include container;
    padding: 0 $spacing-l $spacing-l;
}

.resource-list.preview + a {
    @extend .button;
}

.resource-list.preview + a {
    color: #000;
  
    &:hover {
      background-color: $bold;
      border-bottom-width: 0px;
      color: #fff;
    }
}

.spotlight {
    padding: $spacing-l;
    padding-right: calc(50% + #{$spacing-l});
    background-position: right center;
    background-repeat: no-repeat;
    background-size: 50%;
    margin: (2 * $spacing-l) 0;

    &.left-image {
        background-position: left center;
        padding-left: calc(50% + #{$spacing-l});
        padding-right: 0;
    }

}

.dark-accent {
    color: #fff;
    position: relative;
    padding: $spacing-l 0;
    display: flow-root;
    clear: both;

    &:after {
        content: "";
        background-color: $bold;
        z-index: -1;
        position: absolute;
        left: -9999px;
        right: -9999px;
        top: 0;
        bottom: 0;
    }

    a:link {
        font-weight: bold;
    }
    
    a:link, 
    a:visited {
        color: #ddd;
    }

    ul.resource-list .resource,
    ul.preview.resource-list li:first-of-type {
        border-color: #9b9b9b;
    }

    button, 
    a.button, 
    .resource-list.preview + a, 
    [type="submit"] {
        background-color: #ddd;
        color: $bold;
        font-weight: normal;
    }

    .carousel-block button {
        background-color: transparent;
        color: #fff;
    }
}

.light-accent {
    position: relative;
    padding: $spacing-l 0;
    display: flow-root;
    clear: both;

    &:after {
        content: "";
        background-color: #fff;
        z-index: -1;
        position: absolute;
        left: -9999px;
        right: -9999px;
        top: 0;
        bottom: 0;
        border: 1px solid $light;
    }
}

@media screen and (max-width:799px) {
    .spotlight {
        padding-right: 0 !important;
        padding-left: 0 !important;
        padding-top: 33rem;
        background-position: center #{$spacing-l} !important;
        background-size: auto 30rem;
    }
}

.template-3-grid.assets {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-gap: $spacing-l;
}

@media screen and (max-width:799px) {
    .template-3-grid.assets {
        grid-template-columns: 1fr 1fr;
    }
}

@media screen and (max-width:399px) {
    .template-3-grid.assets {
        grid-template-columns: 1fr;
    }
}

.template-3-grid .asset-container {
    aspect-ratio: 4/3;
    width: 100%;
    height: auto;
    overflow: hidden;
    margin-bottom: $spacing-s;
}

.template-3-grid.assets .asset img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    max-width: none;
}

.page-layout-grid .block-media {
    container-type: inline-size;
}

.page-layout-grid .block-media.has-background {
    align-self: start;
}
/* ... */

